# OpenCv-with-c-

./: CMakeLists.txt  LICENSE  main.cpp
